--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zuri-crud-app",
   "version": "1.0.0",
   "description": "Zuri Training task for NodeJS CRUD Application",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
