--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/programmerjide/zuri-crud-app#readme",
   "dependencies": {
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
     "mongoose-timestamp": "^0.6.0",
     "swagger-jsdoc": "^6.0.1",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
