--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Zuri Training task for NodeJS CRUD Application",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "repository": {
     "type": "git",
